style/pizza.css
#pizza{
    position: absolute;
    background: brown;
    width: 25%;
    height: 35%;
    top: 59.5%;
    left: -700px;
    z-index: 2;
}

.toppingholder{
    background-color: palevioletred;
    height: 20%;
    overflow: hidden;
}

#scoreboard{
    background-color: white;
    position: absolute;
    height: 25%;
    width: 25%;
    left: 70%;
}

.toppingdiv{
    height: 100%;
    width: 12.5%;
    float: left;
}

#topping{
    position: absolute;
    background-color: black;
    height: 20px;
    width: 20px;
    z-index: 3;
}

#maingame{
    background-color: palegreen;
    height: 40%;
    overflow: hidden;
    /* margin-left: 0; */
}

#top{
    background-color: blueviolet;
    height: 40%;
}

#background{
    width: 95vw;
    height: 45vw;
    background-color: rosybrown;
}

